AM_CFLAGS  = --pedantic -O2 -Wall -Wno-unused-function -g -ansi -lcrypto -lreadline
AM_LDFLAGS =
bin_PROGRAMS = ppm

ppm_SOURCES = ppm_aes.c \
			  ppm_aes.h \
			  ppm.c \
			  ppm_command.c \
			  ppm_command.h \
			  ppm_db.c \
			  ppm_db.h \
			  ppm.h \
			  ppm_mem.c \
			  ppm_mem.h \
			  ppm_string.c \
			  ppm_string.h \
			  ppm_table.c \
			  ppm_table.h \
			  main.c 
